feat:add apply table component

--- a/src/pages/ChangePassword/ChangePassword.less
+++ b/src/pages/ChangePassword/ChangePassword.less
@@ -22,25 +22,14 @@
     }
     .tips{
       width: 100%;
-      &-register,&-forget{
-        line-height: 60px;
-        color: grey;
-        display: inline-block;
-      }
-      &-register:hover,&-forget:hover{
-        color: #1677ff;
-      }
-      &-register
-      {
-        float:left;
-        margin-left: 50px;
-      }
-      &-forget{
-        float: right;
-        margin-right: 50px;
-      }
+      line-height: 60px;
+      color: grey;
+      text-align: center;
     }
-
+    .tips:hover
+    {
+      color: #1677ff;
+    }
   }
 }
 
