--- a/src/pages/ApplyTable/ApplyTable.less
+++ b/src/pages/ApplyTable/ApplyTable.less
@@ -3,18 +3,21 @@
   width: 80%;
   min-height: 100vh;
   background: #fff;
-  border-radius: 10px;
+  border-radius: 15px;
   box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
   background: #fff;
-  margin-top: 10px;
+  margin-top: 30px;
   .feidian-logo
   {
-    width: 200px;
-    height: 200px;
-    padding-top: 20px;
+    width: 100%;
     img{
-      width: 100%;
-      height: 100%;
+      width: 200px;
+      height: 200px;
+      padding-top: 20px;
     }
+  }
+  .apply-form
+  {
+     width: 100%;
   }
 }
