feat:add a sending email function

--- a/src/pages/Admin/Home.less
+++ b/src/pages/Admin/Home.less
@@ -5,6 +5,40 @@
     border-radius: 15px;
     margin: 50px auto;
     background: #fff;
+    .header-content
+    {
+        height: 80px;
+        width: 100%;
+        position: relative;
+        img{
+            width: 60px;
+            height: 60px;
+            position: absolute;
+            left: 38px;
+            top: 30px;
+        }
+        .header-title
+        {
+            font-size: 30px;
+            letter-spacing: 3px;
+            position: absolute;
+            left: 111px;
+            top: 38px;
+            color: lightslategrey;
+
+        }
+        .header-button
+        {
+            position: absolute;
+            right: 50px;
+            top: 48px;
+        }
+        .header-switch{
+            position: absolute;
+            right: 150px;
+            top: 51px;
+        }
+    }
     .tabs-content
     {
         margin: 0 50px;
@@ -12,7 +46,7 @@
     }
     .list-content
     {
-        margin: 10px 30px;
+        padding: 10px 30px 25px 30px;
     }
     .description
     {
@@ -21,6 +55,7 @@
         width: 90%;
         overflow: hidden;
     }
+
 }
 .info-title
 {
