--- a/src/pages/ApplyTable/ApplyTable.less
+++ b/src/pages/ApplyTable/ApplyTable.less
@@ -10,11 +10,24 @@
   .feidian-logo
   {
     width: 100%;
+    height: 120px;
+    position: relative;
     img{
-      width: 200px;
-      height: 200px;
-      padding-top: 20px;
+      width: 80px;
+      height: 80px;
+      position: absolute;
+      left: 300px;
+      top: 50px;
     }
+  }
+  .title{
+    font-size: 30px;
+    color: grey;
+    position: absolute;
+    left: 380px;
+    height: 30px;
+    top: 66px;
+    font-weight: 300;
   }
   .apply-form
   {
