--- a/src/pages/ChangePassword/ChangePassword.less
+++ b/src/pages/ChangePassword/ChangePassword.less
@@ -1,17 +1,18 @@
-.login-content
+.change-content
 {
-  width: 700px;
+  width: 80%;
   height: 100vh;
   .login-box
   {
-    width: 475px;
+    width: 480px;
     border-radius:15px;
     background: #fff;
     box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
     .logo{
       width: 70px;
       height: 70px;
-      margin: 40px 0 10px 200px;
+      margin: 50px calc((100% - 70px)/2);
+      margin-bottom: 10px;
     }
     .input-content
     {
