feat:adapt to mobile style

--- a/src/pages/PassResult/PassResult.less
+++ b/src/pages/PassResult/PassResult.less
@@ -1,17 +1,40 @@
-.pass-result-content
-{
-  width: 80%;
-  border-radius: 15px;
-  background: #fff;
-  box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
-  .funny-img-content
+@media only screen and (min-width:500px) {
+  .pass-result-content
   {
-    width: 100%;
-    margin-bottom: 25px;
-    margin-top: -10px;
-    img{
-      width: 200px;
-      border-radius: 15px;
+    width: 80%;
+    border-radius: 15px;
+    background: #fff;
+    box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
+    .funny-img-content
+    {
+      width: 100%;
+      margin-bottom: 25px;
+      margin-top: -10px;
+      img{
+        width: 200px;
+        border-radius: 15px;
+      }
     }
   }
 }
+
+@media only screen and (max-width:500px) {
+  .pass-result-content
+  {
+    width: 90%;
+    border-radius: 15px;
+    background: #fff;
+    box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
+    .funny-img-content
+    {
+      width: 100%;
+      margin-bottom: 25px;
+      margin-top: -10px;
+      img{
+        width: 220px;
+        border-radius: 15px;
+      }
+    }
+  }
+}
+
