feat:improve admin function

--- a/src/pages/ChangePassword/ChangePassword.less
+++ b/src/pages/ChangePassword/ChangePassword.less
@@ -22,9 +22,9 @@
         height: calc(100% - @inputMargin * 2);
         margin: 20px @inputMargin 0 @inputMargin;
         .ant-btn{
-          color: "grey";
-          margin-left: "10px";
-          width:"30%" ;
+          color: grey;
+          margin-left: 10px;
+          width:30% ;
         }
       }
       .tips{
@@ -70,9 +70,9 @@
         margin: 20px @inputMargin 0 @inputMargin;
       }
       .getCode-button{
-        color: "grey";
-        margin-left: "10px";
-        width:"30%" ;
+        color: grey;
+        margin-left: 10px;
+        width:30% ;
       }
       .tips{
         width: 100%;
