feat:添加加载动画，优化用户体验

--- a/src/pages/ApplyTable/ApplyTable.less
+++ b/src/pages/ApplyTable/ApplyTable.less
@@ -47,6 +47,10 @@
             width: 100%;
           }
         }
+      .skeleton-loading
+      {
+        margin: 8%;
+      }
       }
   }
 }
