--- a/src/pages/ApplyResult/ApplyResult.less
+++ b/src/pages/ApplyResult/ApplyResult.less
@@ -1,45 +1,29 @@
-@media only screen and (min-width:500px) {
-  .result-content
-  {
-    width: 80%;
-    border-radius: 15px;
-    background: #fff;
-    box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
-    .ercode-content
-    {
-      width: 100%;
-      margin-bottom: 25px;
-      margin-top: -10px;
-      img{
-        width: 200px;
-        height: 200px;
-        border-radius: 15px;
-      }
-    }
-  }
-}
+.result-content {
+  width: 80%;
+  border-radius: 15px;
+  background: #fff;
+  box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
 
-@media only screen and (max-width:500px) {
-  .result-content
-  {
+  @media only screen and (max-width:500px) {
     width: 90%;
-    border-radius: 15px;
-    background: #fff;
-    box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
-    .ercode-content
-    {
-      width: 100%;
-      margin-bottom: 25px;
-      margin-top: -10px;
-      img{
-        width: 200px;
-        height: 200px;
-        border-radius: 15px;
-      }
+  }
+
+  .ercode-content {
+    width: 100%;
+    margin-bottom: 25px;
+    margin-top: -10px;
+
+    img {
+      width: 200px;
+      height: 200px;
+      border-radius: 15px;
     }
-    .ant-btn{
-      width: 30%;
-      padding-left: 10px;
+
+    @media only screen and (max-width:500px) {
+      .ant-btn {
+        width: 30%;
+        padding-left: 10px;
+      }
     }
   }
 }
