--- a/src/pages/ChangePassword/ChangePassword.less
+++ b/src/pages/ChangePassword/ChangePassword.less
@@ -1,95 +1,70 @@
-@media only screen and (min-width:500px) {
-  .change-content
-  {
-    width: 80%;
-    height: 100vh;
-    .login-box
-    {
-      width: 480px;
-      border-radius:15px;
-      background: #fff;
-      box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
-      .logo{
-        width: 70px;
-        height: 70px;
-        margin: 50px calc((100% - 70px)/2);
-        margin-bottom: 10px;
-      }
-      .input-content
-      {
-        @inputMargin:50px;
-        width: calc(100% - @inputMargin * 2);
-        height: calc(100% - @inputMargin * 2);
-        margin: 20px @inputMargin 0 @inputMargin;
-        .ant-btn{
-          color: grey;
-          margin-left: 10px;
-          width:30% ;
-        }
-      }
-      .tips{
-        width: 100%;
-        line-height: 60px;
-        color: grey;
-        text-align: center;
-      }
-      .tips:hover
-      {
-        color: #1677ff;
-      }
-      .change-button{
-        margin: 20px 50px 20px 50px;
-        width: calc(100% - 100px);
-      }
-    }
-  }
-}
+.change-content {
+  width: 80%;
+  height: 100vh;
 
-@media only screen and (max-width:500px) {
-  .change-content
-  {
+  @media only screen and (max-width:500px) {
     width: 90%;
-    height: 100vh;
-    .login-box
-    {
-      width: 480px;
-      border-radius:15px;
-      background: #fff;
-      box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
-      .logo{
+  }
+
+  .login-box {
+    width: 480px;
+    border-radius: 15px;
+    background: #fff;
+    box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
+
+    .logo {
+      width: 70px;
+      height: 70px;
+      margin: 50px calc((100% - 70px)/2);
+      margin-bottom: 10px;
+
+      @media only screen and (max-width:500px) {
         width: 60px;
         height: 60px;
         margin: 40px calc((100% - 70px)/2);
         margin-bottom: 0px;
       }
-      .input-content
-      {
-        @inputMargin:30px;
+    }
+
+    .input-content {
+      @inputMargin: 50px;
+      width: calc(100% - @inputMargin * 2);
+      height: calc(100% - @inputMargin * 2);
+      margin: 20px @inputMargin 0 @inputMargin;
+
+      @media only screen and (max-width:500px) {
+        @inputMargin: 30px;
         width: calc(100% - @inputMargin * 2);
         height: calc(100% - @inputMargin * 2);
         margin: 20px @inputMargin 0 @inputMargin;
       }
-      .getCode-button{
+
+      .ant-btn {
         color: grey;
         margin-left: 10px;
-        width:30% ;
+        width: 30%;
       }
-      .tips{
-        width: 100%;
-        line-height: 60px;
-        color: grey;
-        text-align: center;
-      }
-      .tips:hover
-      {
-        color: #1677ff;
-      }
-      .change-button{
+    }
+
+    .tips {
+      width: 100%;
+      line-height: 60px;
+      color: grey;
+      text-align: center;
+    }
+
+    .tips:hover {
+      color: #1677ff;
+    }
+
+    .change-button {
+      margin: 20px 50px 20px 50px;
+      width: calc(100% - 100px);
+
+      @media only screen and (max-width:500px) {
         margin: 20px 30px 10px 30px;
         width: calc(100% - 60px);
       }
     }
   }
 }
-
-
