--- a/src/pages/Admin/Home.less
+++ b/src/pages/Admin/Home.less
@@ -1,12 +1,20 @@
 html {
     overflow-x: hidden;
 }
-
+.admin-container{
+    display: flex;
+    margin-top: 50px;
+    border-radius: 15px;
+    overflow: hidden;
+}
+.left-menu-content{
+    width: 20%;
+    min-height: 80vh;
+    background: #fff;
+}
 .admin-home-content {
     width: 80%;
     min-height: 80vh;
-    border-radius: 15px;
-    margin: 50px auto;
     background: #fff;
 
     @media only screen and (max-width:730px) {
