feat：实现部分页面移动端适配功能

--- a/src/pages/ApplyTable/ApplyTable.less
+++ b/src/pages/ApplyTable/ApplyTable.less
@@ -74,12 +74,19 @@
         width: 100%;
       }
 
+      .btn{
+        margin-left: 73%;
+      }
+
       @media only screen and (max-width:800px) {
         width: 100%;
         margin-left: 20px;
 
         .ant-row {
           width: 90%;
+        }
+        .btn{
+          margin-left:52%;
         }
       }
     }
