feat:修改移动端适配bug以及解决提出的问题

--- a/src/pages/Admin/Home.less
+++ b/src/pages/Admin/Home.less
@@ -11,6 +11,10 @@ html {
     width: 20%;
     min-height: 80vh;
     background: #fff;
+    @media only screen and (max-width:730px) {
+      width: 20%;
+      margin: 30px auto;
+    }
 }
 .admin-home-content {
     width: 80%;
