--- a/src/pages/ChangePassword/ChangePassword.less
+++ b/src/pages/ChangePassword/ChangePassword.less
@@ -46,15 +46,18 @@
       }
     }
 
-    .tips {
-      width: 100%;
-      line-height: 60px;
-      color: grey;
-      text-align: center;
-    }
-
-    .tips:hover {
-      color: #1677ff;
+    .to-login{
+      .tips {
+        // width: 100%;
+        width: 150px;
+        line-height: 60px;
+        color: grey;
+        text-align: center;
+      }
+  
+      .tips:hover {
+        color: #1677ff;
+      }
     }
 
     .change-button {
