fix:解决注册页面适配卡顿问题

--- a/src/pages/ChangePassword/ChangePassword.css
+++ b/src/pages/ChangePassword/ChangePassword.css
@@ -44,6 +44,18 @@
   margin-left: 10px;
   width: 30%;
 }
+.change-content .login-box .input-content .getCode-button {
+  color: grey;
+  margin-left: 3%;
+  width: 32%;
+  padding: 1px;
+}
+@media only screen and (max-width: 500px) {
+  .change-content .login-box .input-content .getCode-button {
+    width: 25%;
+    font-size: 14px;
+  }
+}
 .change-content .login-box .to-login .tips {
   width: 150px;
   line-height: 60px;
