--- a/src/pages/ChangePassword/ChangePassword.less
+++ b/src/pages/ChangePassword/ChangePassword.less
@@ -44,6 +44,18 @@
         margin-left: 10px;
         width: 30%;
       }
+
+      .getCode-button{
+        color: grey;
+        margin-left: 3%;
+        width: 32%;
+        padding: 1px;
+        @media only screen and (max-width:500px) {
+          width: 25%;
+          font-size: 14px;
+        }
+      }
+
     }
 
     .to-login{
