--- a/src/pages/register/Register.less
+++ b/src/pages/register/Register.less
@@ -3,8 +3,9 @@
   height: 100vh;
 
   @media only screen and (max-width:500px) {
-    height: 175vh;
+    height: 100%;
     width: 90%;
+    overflow: scroll;
   }
 
   .register-box {
