--- a/src/pages/register/Register.less
+++ b/src/pages/register/Register.less
@@ -67,37 +67,15 @@
       }
     }
 
-    // .input-content {
-    //   @inputMargin: 50px;
-    //   width: calc(100% - @inputMargin * 2);
-    //   height: calc(100% - @inputMargin * 2);
-    //   margin: 20px @inputMargin 0 @inputMargin;
-    //   @media only screen and (max-width:500px) {
-    //     @inputMargin: 30px;
-    //     width: calc(100% - @inputMargin * 2);
-    //     height: calc(100% - @inputMargin * 2);
-    //     margin: 20px @inputMargin 0 @inputMargin;
-    //   }
-    // }
-
-    // .tips {
-    //   width: 100%;
-    //   line-height: 60px;
-    //   color: grey;
-    //   text-align: center;
-    // }
-
-    // .tips:hover {
-    //   color: #1677ff;
-    // }
-
-    // .register-button {
-    //   margin: 20px 50px 20px 50px;
-    //   width: calc(100% - 100px);
-    //   @media only screen and (max-width:500px) {
-    //     margin: 20px 50px 0px 30px;
-    //     width: calc(100% - 60px);
-    //   }
-    // }
+    .sign-btn{
+      width: 150px;
+      margin-left: -68px;
+    }
+    @media only screen and (max-width:500px) {
+      .sign-btn{
+        width: 30%;
+        margin-left: 0px;
+      }
+    }
   }
 }
