--- a/src/pages/register/Register.less
+++ b/src/pages/register/Register.less
@@ -3,6 +3,7 @@
   height: 100vh;
 
   @media only screen and (max-width:500px) {
+    margin: 15px auto;
     height: 100%;
     width: 90%;
     overflow: scroll;
