--- a/src/pages/register/Register.css
+++ b/src/pages/register/Register.css
@@ -4,6 +4,7 @@
 }
 @media only screen and (max-width: 500px) {
   .register-content {
+    margin: 15px auto;
     height: 100%;
     width: 90%;
     overflow: scroll;
